# rustLy

./: Cargo.toml  README.md
rustLy-conf/: Cargo.toml
rustLy-conf/src/: configs.rs  test.rs
rustLy-tui/: Cargo.toml
rustLy-tui/src/: app.rs  draw.rs  lib.rs
